# clook-cli

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_STATUS.md  README.md  main.cpp
docs/: design.md
docs/tests/: writing-tests.md
include/: attempt.hpp  commons.hpp  exceptions.hpp  milestone.hpp  milestoneManager.hpp  note.hpp  timer.hpp
include/storage/: storage.hpp
include/tests/: test_framework.hpp
src/: attempt.cpp  milestone.cpp  milestoneManager.cpp  note.cpp  timer.cpp
src/storage/: storage.cpp
tests/: framework.cpp  test_attemptClass.cpp  test_dummy.cpp  test_framework.cpp  test_main.cpp  test_milestoneClass.cpp  test_timerClass.cpp
